# routes/routes.go
@@ -27,13 +27,13 @@ func RegisterRoutes(r *gin.Engine) {
 	api.GET("/orders", middleware.Autenticated(), controllers.ListOrdersUser)
 
 	//Payment Order
-	//api.PUT("/orders/:id/payment", middleware.Autenticated(), controllers.OrderPayment)
+	api.PUT("/orders/:id/payment", middleware.Autenticated(), controllers.OrderPayment)
 
 	//Cancel Order
 	//api.PUT("/orders/:id/cancel", middleware.Autenticated(), controllers.CancelOrder)
 
 	//Admin routes
-	//api.GET("/admin/orders", middleware.Autenticated(), controllers.ListAllOrdersAdmin)
+	api.GET("/admin/orders", middleware.Autenticated(), controllers.ListAllOrdersAdmin)
 	api.GET("/admin/dashboard/orders", controllers.CountAllOrdersAdmin)
 
 }
